k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress
  namespace: production

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:469072181105:certificate/5149cb8f-f1e4-4b80-b93f-f85b0d1b0544

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60

spec:

  ingressClassName: alb

  rules:

    - host: app.mryash7803.online

      http:

        paths:

        - path: /api

          pathType: Prefix

          backend:

            service:

              name: backend

              port:

                number: 8080

        - path: /

          pathType: Prefix

          backend:

            service:

              name: frontend

              port:

                number: 80
